<resources>
    <string name="app_name">CMM</string>
    <string name="activity_hairdresser_home_edit_profile">編集</string>
    <string name="activity_hairdresser_home_feature_discovery_title_edit_profile_button">プロフィール編集ボタン</string>
    <string name="activity_hairdresser_home_feature_discovery_title_fab_speed_dialog">投稿ボタンメニュー</string>
    <string name="activity_hairdresser_home_feature_discovery_title_tab_item_blog">投稿したブログ</string>
    <string name="activity_hairdresser_home_feature_discovery_title_tab_item_hair_catalog">投稿したヘアカタログ</string>
    <string name="activity_hairdresser_home_feature_discovery_title_toolbar_navigation_button">ナビゲーションボタン</string>
    <string name="activity_hairdresser_home_feature_discovery_description_edit_profile_button">アイコン画像やヘッダー画像などを変更できます。カットモデルの方の目を引くプロフィールを作成しましょう。</string>
    <string name="activity_hairdresser_home_feature_discovery_description_fab_speed_dialog">ヘアカタログやブログを投稿できます。</string>
    <string name="activity_hairdresser_home_feature_discovery_description_tab_item_blog">投稿したブログの一覧を見ることができます。日常の出来事や趣味などを投稿してカットモデルの方に自分のことを知ってもらいましょう。</string>
    <string name="activity_hairdresser_home_feature_discovery_description_tab_item_hair_catalog">投稿したヘアカタログの一覧を見ることができます。目を引くヘアカタログを投稿してカットモデルの方にアピールしましょう。</string>
    <string name="activity_hairdresser_home_feature_discovery_description_toolbar_navigation_button">マイサロン画面や予約一覧画面などに移動できます。</string>
    <string name="activity_hairdresser_home_mini_fab_button_label_post_blog">ブログを投稿</string>
    <string name="activity_hairdresser_home_mini_fab_button_label_post_hair_catalog">ヘアカタログを投稿</string>
    <string name="activity_hairdresser_home_mini_fab_button_label_post_menu">メニューを作成</string>
    <string name="activity_hairdresser_home_navigation_drawer_menu_logout">ログアウト</string>
    <string name="activity_hairdresser_home_navigation_drawer_menu_my_salon">マイサロン</string>
    <string name="activity_hairdresser_home_navigation_drawer_menu_reservations">予約一覧</string>
    <string name="activity_hairdresser_home_navigation_drawer_menu_settings">設定</string>
    <string name="activity_hairdresser_home_tab_item_title_hair_catalog">ヘアカタログ</string>
    <string name="activity_hairdresser_home_tab_item_title_blog">ブログ</string>
    <string name="activity_hairdresser_registration_have_an_account">アカウントをお持ちの方</string>
    <string name="activity_hairdresser_registration_hint_enter_password">パスワードを入力してください</string>
    <string name="activity_hairdresser_registration_hint_enter_password_confirmation">パスワード(確認)</string>
    <string name="activity_hairdresser_registration_hint_enter_profile_title">プロフィールのタイトルを入力してください</string>
    <string name="activity_hairdresser_registration_hint_enter_profile_content">プロフィールの内容を入力してください</string>
    <string name="activity_hairdresser_registration_hint_enter_user_id">IDを入力してください</string>
    <string name="activity_hairdresser_registration_hint_enter_user_name">ユーザ名を入力してください</string>
    <string name="activity_hairdresser_registration_image_content_description_header">美容師</string>
    <string name="activity_hairdresser_registration_register_as_hairdresser">美容師として登録</string>
    <string name="activity_hairdresser_salon_matching_calendar_sunday">日</string>
    <string name="activity_hairdresser_salon_matching_calendar_monday">月</string>
    <string name="activity_hairdresser_salon_matching_calendar_tuesday">火</string>
    <string name="activity_hairdresser_salon_matching_calendar_wednesday">水</string>
    <string name="activity_hairdresser_salon_matching_calendar_thursday">木</string>
    <string name="activity_hairdresser_salon_matching_calendar_friday">金</string>
    <string name="activity_hairdresser_salon_matching_calendar_saturday">土</string>
    <string name="activity_model_registration_hint_enter_password">パスワードを入力してください</string>
    <string name="activity_model_registration_hint_enter_password_confirmation">パスワード(確認)</string>
    <string name="activity_model_registration_hint_enter_profile_title">プロフィールのタイトルを入力してください</string>
    <string name="activity_model_registration_hint_enter_profile_content">プロフィールの内容を入力してください</string>
    <string name="activity_model_registration_hint_enter_user_id">IDを入力してください</string>
    <string name="activity_model_registration_hint_enter_user_name">ユーザ名を入力してください</string>
    <string name="activity_model_registration_image_content_description_header">カットモデル</string>
    <string name="activity_model_registration_register_as_model">カットモデルとして登録</string>
    <string name="activity_model_search_result_tab_item_title_hairdresser">スタイリスト</string>
    <string name="activity_model_search_result_tab_item_title_menu">メニュー</string>
    <string name="activity_role_selection_tab_item_title_hairdresser">美容師の方</string>
    <string name="activity_role_selection_tab_item_title_model">カットモデルの方</string>
    <string name="hairdresser_menu_gender_m">男性</string>
    <string name="hairdresser_menu_gender_f">女性</string>
    <string name="hairdresser_menu_posting_no_photo_selected">画像を選択する</string>
    <string name="hairdresser_menu_posting_photo_selected_agein">画像を変更する</string>
    <string name="fragment_hairdresser_menu_posting_posting_completed_toast_text">メニューを作成しました</string>
    <string name="fragment_hairdresser_menu_posting_toolbar_title">メニュー作成</string>
    <string name="fragment_hairdresser_salon_title">サロンの詳細</string>
    <string name="fragment_hairdresser_salon_name">サロン名</string>
    <string name="fragment_hairdresser_salon_bio">サロン紹介</string>
    <string name="fragment_hairdresser_salon_address">住所</string>
    <string name="fragment_hairdresser_salon_capacity">席数</string>
    <string name="fragment_hairdresser_salon_payment">支払方法</string>
    <string name="fragment_hairdresser_salon_business_hours">営業時間</string>
    <string name="fragment_hairdresser_salon_map">地図</string>
    <string name="fragment_hairdresser_salon_registration_photo">イメージ写真</string>
    <string name="fragment_hairdresser_salon_toolbar_title">マイサロン</string>
    <string name="fragment_hairdresser_salon_registration_hint_enter_salonname">サロン名</string>
    <string name="fragment_hairdresser_salon_registration_hint_enter_salonmemo">サロン紹介</string>
    <string name="fragment_hairdresser_salon_registration_hint_enter_postalcode">郵便番号</string>
    <string name="fragment_hairdresser_salon_registration_hint_enter_address">住所</string>
    <string name="fragment_hairdresser_salon_registration_hint_enter_residence">建物名・部屋番号</string>
    <string name="fragment_hairdresser_salon_registration_hint_enter_seatsnumber">席数</string>
    <string name="fragment_hairdresser_salon_registration_payment">支払方法</string>
    <string name="fragment_hairdresser_salon_registration_button_cash">現金</string>
    <string name="fragment_hairdresser_salon_registration_button_creditcard">クレジットカード</string>
    <string name="fragment_hairdresser_salon_registration_time">営業時間</string>
    <string name="fragment_hairdresser_salon_registration_weekday">平日</string>
    <string name="fragment_hairdresser_salon_registration_hint_enter_starttime">開店時間</string>
    <string name="fragment_hairdresser_salon_registration_hint_enter_endtime">閉店時間</string>
    <string name="fragment_hairdresser_salon_registration_holiday">土日祝</string>
    <string name="fragment_hairdresser_salon_registration_hint_enter_starttime2">開店時間</string>
    <string name="fragment_hairdresser_salon_registration_hint_enter_endtime2">閉店時間</string>
    <string name="fragment_hairdresser_salon_registration_button_registration">登録</string>
    <string name="fragment_hairdresser_salon_registration_button_photo">追加</string>
    <string name="fragment_hairdresser_salon_registration_toolbar_title">サロン登録</string>
    <string name="fragment_model_chat_room_send">送信</string>
    <string name="fragment_model_home_next_reservation_text">次の予約</string>
    <string name="fragment_model_home_not_found_next_reservation_text">次の予約がありません</string>
    <string name="fragment_model_home_cancel_button_text">キャンセル</string>
    <string name="fragment_model_menu_reservation_button">予約</string>
    <string name="fragment_model_menu_reservation_title">予約確認</string>
    <string name="fragment_model_menu_time">日時</string>
    <string name="fragment_model_menu_treatment">施術内容</string>
    <string name="fragment_model_menu_price">料金</string>
    <string name="fragment_model_menu_comment">コメント</string>
    <string name="fragment_model_menu_reservation_checkbox">内容を確認しました</string>
    <string name="fragment_model_menu_reservation_confirmation_checkbox">内容を確認しました</string>
    <string name="fragment_model_menu_reservation_confirmation_reservation_completed">予約が完了しました</string>
    <string name="fragment_model_menu_search_toolbar_title">メニュー検索</string>
    <string name="fragment_model_menu_search_result_toolbar_title">メニュー検索結果</string>
    <string name="fragment_model_menu_search_area_text">エリア</string>
    <string name="fragment_model_menu_search_prefecture_label_text">都道府県</string>
    <string name="fragment_model_menu_search_menu">メニュー</string>
    <string name="fragment_model_menu_search_price">料金</string>
    <string name="fragment_model_menu_search_datetime">日時</string>
    <string name="fragment_model_menu_search_detailed_conditions_label_text">詳細条件</string>
    <string name="fragment_model_menu_search_stylist_label_text">スタイリスト</string>
    <string name="fragment_model_menu_search_male_staff_text">男性スタッフ</string>
    <string name="fragment_model_menu_search_female_staff_text">女性スタッフ</string>
    <string name="fragment_model_menu_search_payment_method_label_text">支払い方法</string>
    <string name="fragment_model_menu_search_credit_card_text">クレジットカードOK</string>
    <string name="fragment_model_menu_search_salon_scale_text">サロン形態</string>
    <string name="fragment_model_menu_search_small_salon_text">小型サロン</string>
    <string name="fragment_model_menu_search_large_salon_text">大型サロン</string>
    <string name="fragment_model_menu_search_parking_label_text">駐車場</string>
    <string name="fragment_model_menu_search_parking_text">有り</string>
    <string name="fragment_model_menu_search_search_button_text">検索</string>
    <string name="fragment_role_selection_hairdresser_card_content_1">CMMには多数のカットモデルが登録しています。希望する髪型や施術内容、性別などを指定してカットモデルを募集してみましょう。CMMがカットモデル探しをお手伝いします。</string>
    <string name="fragment_role_selection_hairdresser_card_image_content_description_header">美容師</string>
    <string name="fragment_role_selection_hairdresser_card_register_as_hairdresser">美容師として登録</string>
    <string name="fragment_role_selection_hairdresser_card_title_1">カットモデルを探していますか?</string>
    <string name="fragment_role_selection_model_card_content_1">カットモデルになれば格安で髪を切ってもらうことができます。美容室代を節約したいと考えている方はカットモデルに応募してみましょう。CMMではカットモデルと美容師のマッチングをお手伝いします。</string>
    <string name="fragment_role_selection_model_card_image_content_description_header">カットモデル</string>
    <string name="am_0">午前0時</string>
    <string name="am_1">午前1時</string>
    <string name="am_2">午前2時</string>
    <string name="am_3">午前3時</string>
    <string name="am_4">午前4時</string>
    <string name="am_5">午前5時</string>
    <string name="am_6">午前6時</string>
    <string name="am_7">午前7時</string>
    <string name="am_8">午前8時</string>
    <string name="am_9">午前9時</string>
    <string name="am_10">午前10時</string>
    <string name="am_11">午前11時</string>
    <string name="pm_1">午後1時</string>
    <string name="pm_2">午後2時</string>
    <string name="pm_3">午後3時</string>
    <string name="pm_4">午後4時</string>
    <string name="pm_5">午後5時</string>
    <string name="pm_6">午後6時</string>
    <string name="pm_7">午後7時</string>
    <string name="pm_8">午後8時</string>
    <string name="pm_9">午後9時</string>
    <string name="pm_10">午後10時</string>
    <string name="pm_11">午後11時</string>
    <string name="hairdresserSalonUnregistered_maintext">このサロンは \nまだ詳細登録 \nされていません</string>
    <string name="hairdresserSalonUnregistered_touroku">詳細登録しますか？</string>
    <string name="YES">はい</string>
    <string name="NO">いいえ</string>
</resources>