<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="training20.tcmobile.mvvm.viewmodels.HairdresserSalonUnregisteredViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.HairdresserSalonUnregisteredFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/view_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/hairdresserSalonUnregistered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:gravity="center_horizontal"
            android:text="@string/hairdresserSalonUnregistered_maintext"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hairdresserSalonUnregistered_touroku"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            android:gravity="center_horizontal"
            android:text="@string/hairdresserSalonUnregistered_touroku"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hairdresserSalonUnregistered" />

        <Button
            android:id="@+id/hairdresserSalonUnregistered_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="40dp"
            android:text="@string/YES"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hairdresserSalonUnregistered_touroku" />

        <Button
            android:id="@+id/hairdresserSalonUnregistered_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="52dp"
            android:text="@string/NO"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hairdresserSalonUnregistered_touroku" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>