<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.HairdresserSalonMatchingCalendarActivity">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title=" ">
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/textColorSecondary"
                android:text="@string/activity_hairdresser_salon_matching_calendar_sunday" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/textColorSecondary"
                android:text="@string/activity_hairdresser_salon_matching_calendar_monday" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/textColorSecondary"
                android:text="@string/activity_hairdresser_salon_matching_calendar_tuesday" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/textColorSecondary"
                android:text="@string/activity_hairdresser_salon_matching_calendar_wednesday" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/textColorSecondary"
                android:text="@string/activity_hairdresser_salon_matching_calendar_thursday" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/textColorSecondary"
                android:text="@string/activity_hairdresser_salon_matching_calendar_friday" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/textColorSecondary"
                android:text="@string/activity_hairdresser_salon_matching_calendar_saturday" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/textColorDividers"/>
        <TableLayout
            android:id="@+id/calendarTableLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#f1f1f1">
            <include android:id="@+id/row1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="1dp"
                layout="@layout/hairdresser_fragment_salon_matching_calendar_table_row" />
            <include android:id="@+id/row2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="1dp"
                layout="@layout/hairdresser_fragment_salon_matching_calendar_table_row" />
            <include android:id="@+id/row3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="1dp"
                layout="@layout/hairdresser_fragment_salon_matching_calendar_table_row" />
            <include android:id="@+id/row4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="1dp"
                layout="@layout/hairdresser_fragment_salon_matching_calendar_table_row" />
            <include android:id="@+id/row5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="1dp"
                layout="@layout/hairdresser_fragment_salon_matching_calendar_table_row" />
            <include android:id="@+id/row6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="1dp"
                layout="@layout/hairdresser_fragment_salon_matching_calendar_table_row" />
        </TableLayout>
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_white_24dp"
        app:tint="@color/colorOnPrimary"/>
</androidx.constraintlayout.widget.ConstraintLayout>